<resources>
    <string name="app_name">Decagon Android 007</string>
    <string name="id">Id</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="commentbody">is existed at the time of life Blessed are the pain of her pains, nor condemn nseq they are nothing  nfugiat or not at all the blandishments of pleasure, and the discomfort may rejecting some  nWho, not being due, we may be able to open the man who did not, but there is no</string>
    <string name="name">Name</string>
    <string name="userid">UserId</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="posts">Posts</string>
    <string name="add_new_comment">Add New Comment</string>
    <string name="send">Comment</string>
    <string name="make_a_post">Make a Post</string>
    <string name="everyone_can_reply">Everyone can reply</string>
    <string name="whats_happening">Whats Happening?</string>
    <string name="post">Post</string>
</resources>