<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.CommentsActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/post_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true"

      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="@id/post_scrollView"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cV"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="@id/CL"
            android:layout_height="297dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/post_title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/post_body_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/post_title_textView"
                    android:layout_marginVertical="8dp"
                    android:text="@string/commentbody"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="UserId :  "
                        android:textColor="#FF0000"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/post_user_idTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/userid"
                        android:textColor="#FF0000"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Id :  "
                        android:textColor="#FF0000"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/post_idTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Id"
                        android:textColor="#FF0000"
                        android:textSize="10sp" />

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/add_commentET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/add_new_comment"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cV" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_commentET" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send_button"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/comment_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_commentFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/purple_700"
        android:src="@drawable/ic_add_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#FFFFFF"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>