<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddCommentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/post_listTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/post_background"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_keyboard_backspace"
                app:tint="@color/design_default_color_primary" />

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="16dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/backIv"
                android:text="Comment"
                android:textSize="16sp" />


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        android:id="@+id/cV"
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_listTB">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/post_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:paddingTop="16dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_body_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_title_textView"
                android:layout_marginVertical="8dp"
                android:text="@string/commentbody"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UserId :  "
                    android:textColor="#FF0000"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/post_user_idTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/userid"
                    android:textColor="#FF0000"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="Id :  "
                    android:textColor="#FF0000"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/post_idTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="Id"
                    android:textColor="#FF0000"
                    android:textSize="10sp" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

<EditText
    android:id="@+id/comment_edit_text"
    app:layout_constraintTop_toBottomOf="@id/cV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginHorizontal="20dp"
    android:textSize="24sp"
    android:textColor="#8A8585"
    android:hint="@string/add_a_comment"/>


</androidx.constraintlayout.widget.ConstraintLayout>